--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 #creamos una variable de entorno que tiene acceso a nuestra API
-REACT_APP_API_LISTATAREAS = http://localhost:3002/tareas
+#REACT_APP_API_LISTATAREAS = http://localhost:3002/tareas
+
+REACT_APP_API_LISTATAREAS = http://localhost:4000/apitareas/tareas
